tests/mut_newtype_contra_in_cov_param.test
type Bad[+T] = T -> int;
####
SyntaxError: Type parameter 'T' is used contravariantly here:
type Bad[+T] = T -> int;
               ^         
Note: But it is declared as covariant here:
type Bad[+T] = T -> int;
         ^
